; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_compress.c_fz_new_deflated_data_from_buffer.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_compress.c_fz_new_deflated_data_from_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fz_new_deflated_data_from_buffer(i32* %0, i64* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i64* %1, i64** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i64 @fz_buffer_storage(i32* %12, i32* %13, i8** %10)
  store i64 %14, i64* %11, align 8
  %15 = load i64, i64* %11, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %4
  %18 = load i8*, i8** %10, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %17, %4
  %21 = load i64*, i64** %7, align 8
  store i64 0, i64* %21, align 8
  store i8* null, i8** %5, align 8
  br label %29

22:                                               ; preds = %17
  %23 = load i32*, i32** %6, align 8
  %24 = load i64*, i64** %7, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = load i64, i64* %11, align 8
  %27 = load i32, i32* %9, align 4
  %28 = call i8* @fz_new_deflated_data(i32* %23, i64* %24, i8* %25, i64 %26, i32 %27)
  store i8* %28, i8** %5, align 8
  br label %29

29:                                               ; preds = %22, %20
  %30 = load i8*, i8** %5, align 8
  ret i8* %30
}

declare dso_local i64 @fz_buffer_storage(i32*, i32*, i8**) #1

declare dso_local i8* @fz_new_deflated_data(i32*, i64*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
